--- a/index.html
+++ b/index.html
@@ -1,69 +1,64 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>IPA Name Training Karuta</title>
+<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8">
+<title>フォニックスカード｜記号 ↔ 例単語</title>
 <style>
-body {
-  font-family: -apple-system, "Hiragino Sans", Arial, sans-serif;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  background: #fafafa;
-  height: 100vh;
-}
+body{font-family:-apple-system,"Hiragino Sans",Arial,sans-serif;background:#fff;text-align:center}
+h1{font-size:20px;margin-top:10px}
+table{border-collapse:separate;border-spacing:8px;margin:0 auto}
+th,td{border:none;vertical-align:top;text-align:center}
+th.header{background:#b7e3e4;font-size:16px;font-weight:bold;padding:6px 10px}
+th.vowel{background:#0d7b78;color:#fff;width:40px;height:60px;font-size:18px;border-radius:8px;vertical-align:middle}
+.card{width:200px;height:40px;perspective:600px;margin:6px auto;cursor:pointer}
+.inner{position:relative;width:100%;height:100%;transform-style:preserve-3d;transition:transform .6s}
+.card.flipped .inner{transform:rotateY(180deg)}
+.front,.back{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;border:2px solid teal;border-radius:10px;background:#fffbea;font-weight:bold;box-sizing:border-box;backface-visibility:hidden}
+.back{transform:rotateY(180deg);word-spacing:8px}
+.ipa{color:#0077cc;font-size:14px}
+.red{color:#d00}
+</style></head><body>
+<h1>フォニックス母音カード（表＝記号／裏＝例単語）</h1>
+<table>
+<tr><th></th><th class="header">短母音</th><th class="header">二重母音</th><th class="header">曖昧母音</th></tr>
 
-.flip-card {
-  background-color: transparent;
-  width: 180px;
-  height: 150px;
-  perspective: 1000px;
-}
+<tr><th class="vowel">A</th>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/æ/</span></div><div class="back">c<span class="red">a</span>mp, b<span class="red">a</span>th, f<span class="red">a</span>n</div></div></div></td>
+<td>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/eɪ/</span></div><div class="back">f<span class="red">a</span>te, th<span class="red">e</span>y, gr<span class="red">ea</span>t</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ɑːr/</span></div><div class="back">c<span class="red">ar</span>, <span class="red">ar</span>t, m<span class="red">ar</span>k</div></div></div>
+</td>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/ə/</span></div><div class="back"><span class="red">a</span>bout, s<span class="red">u</span>pport, penc<span class="red">i</span>l</div></div></div></td>
+</tr>
 
-.flip-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
+<tr><th class="vowel">E</th>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/e/</span></div><div class="back">l<span class="red">e</span>t, g<span class="red">e</span>t, <span class="red">e</span>gg</div></div></div></td>
+<td>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/iː/</span></div><div class="back">f<span class="red">ee</span>, sh<span class="red">e</span>, bel<span class="red">ie</span>ve</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ɝː/</span></div><div class="back">b<span class="red">ir</span>d, t<span class="red">er</span>m, h<span class="red">ur</span>t</div></div></div>
+</td>
+<td></td></tr>
 
-.flip-card.flipped .flip-inner {
-  transform: rotateY(180deg);
-}
+<tr><th class="vowel">I</th>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/ɪ/</span></div><div class="back">f<span class="red">i</span>t, <span class="red">i</span>ncome, <span class="red">i</span>t</div></div></div></td>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/aɪ/</span></div><div class="back"><span class="red">i</span>ce, <span class="red">i</span>ron, <span class="red">i</span>dea</div></div></div></td>
+<td></td></tr>
 
-.flip-front, .flip-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid #0d7b78;
-  border-radius: 12px;
-  font-size: 20px;
-  background: #fff;
-}
+<tr><th class="vowel">O</th>
+<td>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ɑ/</span></div><div class="back">h<span class="red">o</span>t, n<span class="red">o</span>t, l<span class="red">o</span>ck</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ʊ/</span></div><div class="back">b<span class="red">oo</span>k, sh<span class="red">ou</span>ld, p<span class="red">u</span>t</div></div></div>
+</td>
+<td>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/oʊ/</span></div><div class="back">n<span class="red">o</span>te, n<span class="red">o</span>, sl<span class="red">o</span>w</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/uː/</span></div><div class="back">t<span class="red">oo</span>, l<span class="red">oo</span>se, thr<span class="red">ou</span>gh</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/aʊ/</span></div><div class="back">h<span class="red">ou</span>se, <span class="red">ou</span>t, c<span class="red">ou</span>nt</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ɔɪ/</span></div><div class="back">b<span class="red">oy</span>, j<span class="red">oy</span>, j<span class="red">oi</span>n</div></div></div>
+ <div class="card"><div class="inner"><div class="front"><span class="ipa">/ɔːr/</span></div><div class="back">f<span class="red">or</span>, s<span class="red">or</span>t, st<span class="red">or</span>m</div></div></div>
+</td>
+<td></td></tr>
 
-.flip-front { color: #0d7b78; font-weight: bold; }
-.flip-back {
-  transform: rotateY(180deg);
-  background: #f5fffa;
-  color: #000;
-}
-.redvowel { color: #d00; font-weight: bold; }
-</style>
-</head>
-
-<body>
-<div id="card-container"></div>
-<script src="js/data.js"></script>
-<script src="js/main.js"></script>
-</body>
-</html>
+<tr><th class="vowel">U</th>
+<td><div class="card"><div class="inner"><div class="front"><span class="ipa">/ʌ/</span></div><div class="back">b<span class="red">u</span>t, f<span class="red">u</span>n, c<span class="red">o</span>me</div></div></div></td>
+<td></td><td></td></tr>
+</table>
+<script>
+document.querySelectorAll(".card").forEach(c=>c.addEventListener("click",()=>c.classList.toggle("flipped")));
+</script></body></html>
