add Cloudflare counter integration

--- a/index.html
+++ b/index.html
@@ -62,3 +62,10 @@ th.vowel{background:#0d7b78;color:#fff;width:40px;height:60px;font-size:18px;bor
 <script>
 document.querySelectorAll(".card").forEach(c=>c.addEventListener("click",()=>c.classList.toggle("flipped")));
 </script></body></html>
+<script>
+fetch("https://counter-app.english-phonics.workers.dev/?app=ipa-name-training-karuta-4")
+  .then(res => res.json())
+  .then(data => {
+    console.log("今日のアクセス数:", data.count);
+  });
+</script>
